align fix?

--- a/5-drill/jorgensen-flex/assets/css/scheme.css
+++ b/5-drill/jorgensen-flex/assets/css/scheme.css
@@ -54,3 +54,7 @@ footer {
     height: 240px;
     width: 240px;
 }
+
+header {
+    display: none
+}
